# Attalo

./: .gitignore  CMakeLists.txt  GraphicsEngine.sln  README.md  displayManager.cpp  glad.c  main.cpp  main.h  renderer.h
GraphicsEngine/: GraphicsEngine.vcxproj  GraphicsEngine.vcxproj.filters  displayManager.h  input.h  main.back  main.cpp  renderer.cpp  shader.h
GraphicsEngine/Debug/: vc141.idb
GraphicsEngine/Debug/GraphicsEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GraphicsEngine.lastbuildstate
GraphicsEngine/x64/Debug/: vc141.idb
GraphicsEngine/x64/Debug/GraphicsEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GraphicsEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glfw/src/: CMakeLists.txt
src/: camera.cpp  camera.h  color_shader.frag  engine.cpp  engine.h  input.cpp  input.h  main.cpp  mouse.h  object.h  renderer.cpp  renderer.h  shader.h
src/camera/: camera.cpp  camera.h
src/input/: input.cpp  input.h  mouse.h
src/interfaces/: object.h  pointlight.h  screen.h  spotlight.h  texture.h
src/renderer/: renderer.cpp  renderer.h  shader.h
src/shaders/: color_shader.frag  color_shader.vert  light_shader.frag  material_shader.frag  material_shader.vert  shader.frag  shader.vert
src/widgets/: console.h  document.h
x64/Debug/: GraphicsEngine.ilk
